envoy/tests/docker/default/envoy.yaml
# This file is overwritten upon Agent upgrade.
# To make modifications to the check configuration, please copy this file
# to `envoy.yaml` and make your changes on that file.

init_config:

instances:
  # For every instance, you need a `stats_url` and can optionally
  # supply a list of tags. The admin endpoint must be accessible.
  # https://www.envoyproxy.io/docs/envoy/latest/operations/admin

  - stats_url: http://front-envoy:8001/stats

  #   tags:
  #     - instance:foo

  #   <<<Note>>> The Envoy admin endpoint does not support auth until:
  #   https://github.com/envoyproxy/envoy/issues/2763
  #   For an alternative, see:
  #   https://gist.github.com/ofek/6051508cd0dfa98fc6c13153b647c6f8
  #
  #   If the stats page is behind basic auth:
  #   username: USERNAME
  #   password: PASSWORD

  #   The (optional) verify_ssl parameter will instruct the check to validate SSL
  #   certificates when connecting to Envoy. Defaulting to true, set to false if
  #   you want to disable SSL certificate validation.
  #
  #   verify_ssl: true

  #   The (optional) skip_proxy parameter will bypass any proxy
  #   settings enabled and attempt to reach Envoy directly.
  #
  #   skip_proxy: false

  #   If you need to specify a custom timeout in seconds (default is 20):
  #   timeout: 20
